# QUANTUM_ENTROPY

./: README.md  pyproject.toml  requirements.txt
src/quantum_entropy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quantum_entropy/core/: __init__.py  canonical_purification.py  density_operator.py  quantum_state.py  spectral.py  state_preparation_oracle.py
src/quantum_entropy/primitives/: __init__.py  block_encoding.py  block_encoding_circuit.py  evolution.py  functional_transform.py  matrix_function.py  polynomial.py  polynomial_transform.py
tests/: test_block_encoding.py  test_block_encoding_circuit.py  test_density_operator.py  test_evolution.py  test_functional_transform.py  test_matrix_function.py  test_polynomial.py  test_polynomial_transform.py  test_purification.py  test_quantum_state.py  test_state_preparation_oracle.py
